# ChameLib

./: .gitignore  CHET_RSA_CDK_2017_Test.txt  CH_CDK_2017_Test.txt  CMakeLists.txt  CP_ABE_Test.txt  LICENSE  README.md  TimeTest.py
.github/workflows/: c-cpp.yml  test.yml
include/: ChameLib.h
include/ABE/: ABET.h  CP_ABE.h  MA_ABE.h  Policy_generation.h  Policy_resolution.h  RABE_TMM.h  RABE_XNM.h
include/AE/: PKE_CCA_AMV_2017.h  PKE_CPA_AMV_2017.h  RSA.h
include/SE/: AES.h
include/base/: Access_structure.h  Binary_tree_RABE.h  Binary_tree_policy.h  Element_t_matrix.h  Element_t_vector.h  GmpElements.h  GmpElements_copy.h  Key.h  MpzElements.h  Num_vector.h  PbcElements.h  PbcElements_copy.h  PbcScheme.h  element_t_vector.h
include/common/: KeyType.h  VarName.h
include/curve/: params.h
include/exception/: BaseException.h  CurveException.h  ElementException.h  Exception.h
include/scheme/CH/: CHET_RSA_CDK_2017.h  CH_AMV_2017.h  CH_CDK_2017.h  CH_ET.h  CH_ET_BC_CDK_2017.h  CH_ET_KOG_CDK_2017.h  CH_FS_ECC_CCT_2024.h  CH_KEF_CZK_2004.h  CH_KEF_DLP_LLA_2012.h  CH_KEF_DL_CZT_2011.h  CH_KEF_MH_RSANN_F_AM_2004.h  CH_KEF_MH_RSA_F_AM_2004.h  CH_KEF_MH_SDH_DL_AM_2004.h  CH_KEF_NoMH_AM_2004.h  CR_CH_DSS_2020.h  FCR_CH_PreQA_DKS_2020.h  MCH_CDK_2017.h
include/scheme/IBCH/: IB_CH_KEF_CZS_2014.h  IB_CH_MD_LSX_2022.h  IB_CH_ZSS_S1_2003.h  IB_CH_ZSS_S2_2003.h  ID_B_CollRes_XSL_2021.h
include/scheme/PBCH/: DPCH_MXN_2022.h  MAPCH_ZLW_2021.h  PCHBA_TLL_2020.h  PCH_DSS_2019.h  RPCH_TMM_2022.h  RPCH_XNM_2021.h
include/signature/: BLS.h
include/utils/: Func.h  Hash.h  Logger.h  RandomGenerator.h  TimeUtils.h  TypeConverter.h
libs/gmp/lib/: libgmp.so.10.5.0
libs/lib/: libpbc.so.1
src/ABE/: ABET.cpp  CP_ABE.cpp  MA_ABE.cpp  Policy_generation.cpp  Policy_resolution.cpp  RABE_TMM.cpp  RABE_XNM.cpp
src/AE/: PKE_CCA_AMV_2017.cpp  PKE_CPA_AMV_2017.cpp  RSA.cpp
src/SE/: AES.cpp
src/base/: Access_structure.cpp  Binary_tree_RABE.cpp  Binary_tree_policy.cpp  Element_t_matrix.cpp  Element_t_vector.cpp  GmpElements.cpp  GmpElements_copy.cpp  MpzElements.cpp  Num_vector.cpp  PbcElements.cpp  PbcElements_copy.cpp  PbcScheme.cpp
src/curve/: params.cpp
src/scheme/CH/: CHET_RSA_CDK_2017.cpp  CH_AMV_2017.cpp  CH_CDK_2017.cpp  CH_ET.cpp  CH_ET_BC_CDK_2017.cpp  CH_ET_KOG_CDK_2017.cpp  CH_FS_ECC_CCT_2024.cpp  CH_KEF_CZK_2004.cpp  CH_KEF_DLP_LLA_2012.cpp  CH_KEF_DL_CZT_2011.cpp  CH_KEF_MH_RSANN_F_AM_2004.cpp  CH_KEF_MH_RSA_F_AM_2004.cpp  CH_KEF_MH_SDH_DL_AM_2004.cpp  CH_KEF_NoMH_AM_2004.cpp  CR_CH_DSS_2020.cpp  FCR_CH_PreQA_DKS_2020.cpp  MCH_CDK_2017.cpp
src/scheme/IBCH/: IB_CH_KEF_CZS_2014.cpp  IB_CH_MD_LSX_2022.cpp  IB_CH_ZSS_S1_2003.cpp  IB_CH_ZSS_S2_2003.cpp  ID_B_CollRes_XSL_2021.cpp
src/scheme/PBCH/: DPCH_MXN_2022.cpp  MAPCH_ZLW_2021.cpp  PCHBA_TLL_2020.cpp  PCH_DSS_2019.cpp  RPCH_TMM_2022.cpp  RPCH_XNM_2021.cpp
src/signature/: BLS.cpp
src/utils/: Func.cpp  Hash.cpp  Logger.cpp  RandomGenerator.cpp  TimeUtils.cpp  TypeConverter.cpp
test/: basicTimeTest.sh  benchmark.sh
test/ABE_test/: ABET_test.cpp  CP_ABE_test.cpp  MA_ABE_test.cpp  RABE_TMM_test.cpp  RABE_XNM_test.cpp
test/AE_test/: PKE_CCA_AMV_2017_test.cpp  PKE_CPA_AMV_2017_test.cpp  RSA_test.cpp
test/SE_test/: AES_test.cpp
test/common/: CommonTest.h  cal_diff.h
test/scheme_test/: base_test.cpp
test/scheme_test/CH_test/: CHET_RSA_CDK_2017_test.cpp  CH_AMV_2017_test.cpp  CH_CDK_2017_test.cpp  CH_ET_BC_CDK_2017_test.cpp  CH_ET_KOG_CDK_2017_test.cpp  CH_FS_ECC_CCT_2024_test.cpp  CH_KEF_CZK_2004_test.cpp  CH_KEF_DLP_LLA_2012_test.cpp  CH_KEF_DL_CZT_2011_test.cpp  CH_KEF_MH_RSANN_F_AM_2004_test.cpp  CH_KEF_MH_RSA_F_AM_2004_test.cpp  CH_KEF_MH_SDH_DL_AM_2004_test.cpp  CH_KEF_NoMH_AM_2004_test.cpp  CR_CH_DSS_2020_test.cpp  FCR_CH_PreQA_DKS_2020_test.cpp  MCH_CDK_2017_test.cpp
test/scheme_test/IBCH_test/: IB_CH_KEF_CZS_2014_test.cpp  IB_CH_MD_LSX_2022_test.cpp  IB_CH_ZSS_S1_2003_test.cpp  IB_CH_ZSS_S2_2003_test.cpp  ID_B_CollRes_XSL_2021_test.cpp
test/scheme_test/PBCH_test/: DPCH_MXN_2022_test.cpp  MAPCH_ZLW_2021_test.cpp  PCHBA_TLL_2020_test.cpp  PCH_DSS_2019_test.cpp  RPCH_TMM_2022_test.cpp  RPCH_XNM_2021_test.cpp
test/scheme_test/benchmark/CH/: CHET_RSA_CDK_2017_benchmark.cpp  CH_CDK_2017_benchmark.cpp  CH_ET_BC_CDK_2017_benchmark.cpp  CH_ET_KOG_CDK_2017_benchmark.cpp  CH_FS_ECC_CCT_2024_benchmark.cpp  CH_KEF_CZK_2004_benchmark.cpp  CH_KEF_DLP_LLA_2012_benchmark.cpp  CH_KEF_DL_CZT_2011_benchmark.cpp  CH_KEF_MH_RSANN_F_AM_2004_benchmark.cpp  CH_KEF_MH_RSA_F_AM_2004_benchmark.cpp  CH_KEF_MH_SDH_DL_AM_2004_benchmark.cpp  CH_KEF_NoMH_AM_2004_benchmark.cpp  CR_CH_DSS_2020_benchmark.cpp  FCR_CH_PreQA_DKS_2020_benchmark.cpp  MCH_CDK_2017_benchmark.cpp
test/scheme_test/time_test/: CH_KEF_MH_RSANN_F_AM_2004.cpp  CH_KEF_MH_RSA_F_AM_2004.cpp  CH_KEF_MH_SDH_DL_AM_2004.cpp  CH_KEF_NoMH_AM_2004.cpp
test/signature_test/: BLS_test.cpp
tests/ABE_test/: 1.cpp  ABET_test.cpp  CP_ABE_test.cpp  MA_ABE_test.cpp  RABE_TMM_test.cpp  RABE_XNM_test.cpp
tests/RSA_test/: PKE_CCA_AMV_2017_test.cpp  PKE_CPA_AMV_2017_test.cpp  RSA_test.cpp
tests/SE_test/: AES_test.cpp
tests/base_test/: Elements_test.cpp
tests/common/: CHTest.h  CommonTest.cpp  CommonTest.h  example.cpp
tests/scheme_test/CH_test/: CHET_RSA_CDK_2017_test.cpp  CH_AMV_2017_test.cpp  CH_CDK_2017_test.cpp  CH_ET_BC_CDK_2017_test.cpp  CH_ET_test.cpp  CH_FS_ECC_CCT_2024_test.cpp  CH_KEF_CZK_2004_test.cpp  CH_KEF_DLP_LLA_2012_test.cpp  CH_KEF_DL_CZT_2011_test.cpp  CH_KEF_MH_RSA_F_AM_2004_test.cpp  CH_KEF_MH_SDH_DL_AM_2004_test.cpp  CH_KEF_NoMH_AM_2004_test.cpp  CR_CH_DSS_2020_test.cpp  FCR_CH_PreQA_DKS_2020_test.cpp  MCH_CDK_2017_test.cpp
tests/scheme_test/IBCH_test/: IB_CH_KEF_CZS_2014_test.cpp  IB_CH_MD_LSX_2022_test.cpp  IB_CH_ZSS_S1_2003_test.cpp  IB_CH_ZSS_S2_2003_test.cpp  ID_B_CollRes_XSL_2021_test.cpp
tests/scheme_test/PBCH_test/: DPCH_MXN_2022_test.cpp  MAPCH_ZLW_2021_test.cpp  PCHBA_TLL_2020_test.cpp  PCH_DSS_2019_test.cpp  RPCH_TMM_2022_test.cpp  RPCH_XNM_2021_test.cpp
tests/signature_test/: BLS_test.cpp
(+11 files in other folders)
